fix: replace `body.admin-bar` with `#admin-bar` for fixed navigation styles

--- a/wp-content/themes/marchebe/assets/css/marchebe.css
+++ b/wp-content/themes/marchebe/assets/css/marchebe.css
@@ -3055,11 +3055,11 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-body.admin-bar nav.fixed {
+#admin-bar nav.fixed {
   top: 34px;
 }
 @media screen and (max-width: 782px) {
-  body.admin-bar nav.fixed {
+  #admin-bar nav.fixed {
     top: 46px;
   }
 }
