--- a/wp-content/themes/marchebe/assets/css/tailwind.css
+++ b/wp-content/themes/marchebe/assets/css/tailwind.css
@@ -51,12 +51,12 @@ body {
 }
 
 /* WordPress admin bar fix for fixed navigation */
-body.admin-bar nav.fixed {
+#admin-bar nav.fixed {
     top: 34px;
 }
 
 @media screen and (max-width: 782px) {
-    body.admin-bar nav.fixed {
+    #admin-bar nav.fixed {
         top: 46px;
     }
 }
