fix: update selector from `#admin-bar` to `#wpadminbar` for WordPress admin bar styles

--- a/wp-content/themes/marchebe/assets/css/marchebe.css
+++ b/wp-content/themes/marchebe/assets/css/marchebe.css
@@ -3055,11 +3055,11 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-#admin-bar nav.fixed {
+#wpadminbar nav.fixed {
   top: 34px;
 }
 @media screen and (max-width: 782px) {
-  #admin-bar nav.fixed {
+  #wpadminbar nav.fixed {
     top: 46px;
   }
 }
