fix: adjust admin bar styles for improved fixed navigation compatibility

--- a/wp-content/themes/marchebe/assets/css/marchebe.css
+++ b/wp-content/themes/marchebe/assets/css/marchebe.css
@@ -3055,11 +3055,11 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-#wpadminbar nav.fixed {
-  top: 34px;
+body.admin-bar nav.fixed {
+  top: 32px;
 }
 @media screen and (max-width: 782px) {
-  #wpadminbar nav.fixed {
+  body.admin-bar nav.fixed {
     top: 46px;
   }
 }
