--- a/wp-content/themes/marchebe/templates/category/_description.html.twig
+++ b/wp-content/themes/marchebe/templates/category/_description.html.twig
@@ -1,6 +1,6 @@
 {% if description %}
-    <section class="py-4 lg:py-4 bg-background mt-3" id="posts">
-        <div class="container mx-auto px-6 text-cta-brown">
+    <section class="py-6 bg-gray-50 border-l-4 border-cta-light mt-4 mx-4 md:mx-8 rounded-r-lg">
+        <div class="px-6 text-gray-700 prose prose-sm max-w-none">
             {{ description|raw }}
         </div>
     </section>
