--- a/wp-content/themes/marchebe/templates/category/_post_inline.html.twig
+++ b/wp-content/themes/marchebe/templates/category/_post_inline.html.twig
@@ -1,11 +1,10 @@
 <article
-        class="group bg-white p-2 rounded-xl shadow-sm hover:shadow-xl hover:-translate-y-2 transition-all duration-300 ease-in-out animated-element">
-    <h2 class="text-lg font-semibold group-hover:text-citoyen">
-        <a :href="post.link" x-text="post.name"></a>
+        class="group bg-white p-4 rounded-xl border border-gray-100 hover:border-cta-light hover:shadow-lg transition-all duration-300">
+
+    <h2 class="text-lg font-normal text-gray-800 group-hover:text-cta-dark leading-snug">
+        <a :href="post.link" class="no-underline!" x-text="post.name"></a>
     </h2>
-    <div class="mt-2  line-clamp-3" x-html="post.excerpt" x-show="post.excerpt"></div>
-    <a :href="post.link"
-       class="inline-block  text-primary mt-6 group-hover:underline group-hover:text-citoyen">
-        En savoir plus →
-    </a>
+
+    <div class="mt-3 text-gray-600 text-sm leading-relaxed line-clamp-3"
+         x-html="post.excerpt" x-show="post.excerpt"></div>
 </article>
