--- a/wp-content/themes/marchebe/assets/css/tailwind.css
+++ b/wp-content/themes/marchebe/assets/css/tailwind.css
@@ -15,18 +15,18 @@
     --font-montserrat-semi-bold: Montserrat, sans-serif;
     --font-montserrat-extra-bold: Montserrat, sans-serif;
     --color-midnight: #121063;
-    --color-black-base: #585656;
-    --color-administration: #82786FFF;
-    --color-citoyen: #FF7200FF;
-    --color-citoyen-100: rgba(255, 114, 0, 0.9);
+    --color-black-base: #4a4a4a;
+    --color-administration: #6b7280;
+    --color-citoyen: #e86a10;
+    --color-citoyen-100: rgba(232, 106, 16, 0.9);
     --color-regal-blue: #243c5a;
     --color-culture: #002F2FFF;
-    --color-economie: #0098DBFF;
-    --color-enfance: #00B092FF;
+    --color-economie: #0891b2;
+    --color-enfance: #059669;
     --color-sante: #D71F85FF;
-    --color-sport: #98C02DFF;
-    --color-social: #CB0044FF;
-    --color-tourisme: #8A5A9DFF;
+    --color-sport: #65a30d;
+    --color-social: #dc2626;
+    --color-tourisme: #7c3aed;
     --color-cta-light2: #5A8C96;
     --color-cta-light: #6B9CA5;
     --color-cta-brown: #7B6B5F;
