--- a/wp-content/themes/marchebe/templates/homepage/_widgets.html.twig
+++ b/wp-content/themes/marchebe/templates/homepage/_widgets.html.twig
@@ -8,7 +8,7 @@
                             class="group p-4 md:p-6 rounded-xl hover:bg-white hover:shadow-lg transition-all duration-300 flex flex-col items-center text-center">
                         <div
                                 class="w-16 h-16 md:w-24 md:h-24 rounded-full bg-white shadow-md {{ item.bgcolorhover }} group-hover:shadow-lg transition-all duration-300 mb-3 md:mb-4 flex items-center justify-center">
-                            <i class="{{ item.icon }} {{ item.iconcolor }} text-2xl md:text-4xl transition-all duration-300 group-hover:text-white group-hover:scale-110"></i>
+                            <i class="{{ item.icon }} text-slate-700 text-2xl md:text-4xl transition-all duration-300 group-hover:text-white group-hover:scale-110"></i>
                         </div>
                         <h2 class="font-semibold text-sm text-slate-700 md:text-lg leading-tight">{{ item.name }}</h2>
                     </a>
